--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
 
     font-size: 22px;
     font-weight: normal;
-    font-family: Garamond, 'Junicode', sans-serif;
+    font-family: sans-serif, 'Segoe UI',"Times New Roman";
 }
 /* links */
 a {
