--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,12 @@ body{
     font-weight: normal;
     font-family: sans-serif, 'Segoe UI',"Times New Roman";
 }
+
+img{
+    width: 400px;
+    height: 400px;
+}
+
 /* links */
 a {
     color: black;
@@ -35,12 +41,18 @@ a:visited {
     display: flex;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 767px) {
     .info {
         text-align: center;
-        display: block;
+    }
+
+    img{
+        width: 33,333333vw;
+        height: 33,333333vh;
     }
 }
+
+
 
 .infotext {
     margin-left: 40px;
@@ -72,7 +84,7 @@ a:visited {
 .full_body{
     max-width: 800px;
     margin: auto;
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 .card {
@@ -80,6 +92,10 @@ a:visited {
     padding: 15px 20px;
     margin-bottom: 15px;
     border-radius: 30px;
+}
+
+.card p{
+    padding-inline: 20px;
 }
 
 .card h2 {
@@ -97,12 +113,12 @@ a:visited {
     padding-bottom: 10px;
 }
 
-.card p {
+/* .card p {
     margin: 15px -20px;
 
     color: #44587c;
     font-weight: 500;
-}
+} */
 
 .source_list{
     padding: 0 20px;
